@startuml excellent_tables
entity users {
  * id INT auto_increment (PK)
  ---
  * username VARCHAR(255)
  * email VARCHAR(255)
  * created DATETIME
  * updated DATETIME
}

entity batting_centers {
  * id INT auto_increment (PK)
  --
	* place_id VARCHAR(255)
  * created DATETIME
  * updated DATETIME
}

entity machine_informations {
  * id INT auto_increment (PK)
  --
  * user_id INT (FK)
	* batting_center_id INT(FK)
  * batter_box VARCHAR
  * created DATETIME
  * updated DATETIME
}

entity breaking_balls {
  * id INT auto_increment (PK)
  --
  * name VARCHAR(255)
  * created DATETIME
  * updated DATETIME
}

entity ball_speeds {
  * id INT auto_increment (PK)
  --
  * speed INT
  * created DATETIME
  * updated DATETIME
}

entity itta_users_centers {
  * id INT auto_increment (PK)
  --
	* user_id INT (FK)
	* batting_center_id INT(FK)
  * created DATETIME
  * updated DATETIME
}

entity atta_users_machines {
  * id INT auto_increment (PK)
  --
	* user_id INT (FK)
	* machine_id INT(FK)
  * created DATETIME
  * updated DATETIME
}

entity nakatta_users_machines {
  * id INT auto_increment (PK)
  --
	* user_id INT (FK)
	* machine_id INT(FK)
  * created DATETIME
  * updated DATETIME
}

entity machines_breaking_balls {
  * id INT auto_increment (PK)
  --
	* machine_id INT (FK)
	* breaking_ball_id INT(FK)
  * created DATETIME
  * updated DATETIME
}

entity machines_ball_speeds {
  * id INT auto_increment (PK)
  --
	* machine_id INT (FK)
	* ball_speed_id INT(FK)
  * created DATETIME
  * updated DATETIME
}

machine_informations }o--|| users
machine_informations }o--|| batting_centers
machine_informations ||--o{ atta_users_machines
machine_informations ||-r-o{ machines_breaking_balls
machine_informations ||-u-o{ machines_ball_speeds
breaking_balls ||--o{ machines_breaking_balls
ball_speeds ||-r-o{ machines_ball_speeds
users ||--o{ itta_users_centers
batting_centers ||--o{ itta_users_centers
users ||-r-o{ atta_users_machines
users ||--o{ nakatta_users_machines
machine_informations ||-l-o{ nakatta_users_machines

@enduml